--- a/main.css
+++ b/main.css
@@ -2,11 +2,11 @@
 /*background: url("img/background.png") #ccc;*/
 /*}*/
 html {
-    background: url(img/background.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background: url(img/background.png) no-repeat fixed center;
 }
 
 #title-wrapper {
@@ -14,19 +14,34 @@ html {
     color: white;
     margin-top: 350px;
 }
-#title-wrapper h1{
+
+#title-wrapper h1 {
     font-size: 5em;
     font-family: 'Work Sans', sans-serif;
 
 }
-.fa{
+
+.fa {
     color: white;
     font-size: 5em;
     margin-right: 8px;
 }
-.icons{
+
+.icons {
     text-align: center;
 
 }
-a{text-decoration: none;
+
+a {
+    text-decoration: none;
+}
+
+.play-store-icon {
+    max-width: 5em;
+    margin-right: 8px;
+    /*position: absolute;*/
+    /*left: 560px;*/
+    /*top: 497px;*/
+    /*bottom: 0;*/
+    /*right: 0;*/
 }
