--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ html {
 #title-wrapper h1 {
     font-size: 5em;
     font-family: 'Work Sans', sans-serif;
-
+    text-indent: -.6em;
 }
 
 .fa {
@@ -47,7 +47,7 @@ a {
 }
 @media (max-width: 666px) {
     #title-wrapper {
-        margin-top: 220px;
+        margin-top: 100px;
     }
 
 }
