--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 100%
 }
 
 #title-wrapper {
